Add production deployment scripts and frontend enhancements
Introduces cPanel deployment script, production README, and database setup SQL for streamlined deployment. Adds new frontend components (ErrorBoundary, ErrorFallback, EventsComponent, NoticesComponent, LoadingSpinner, StructuredData, OptimizedImage) and utility modules for accessibility and responsiveness. Updates homepage and global styles for improved SEO, accessibility, and image optimization. Refactors homepage logic, enhances API route error handling, and adds a test page for image loading.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "deploy:cpanel": "chmod +x deploy-cpanel.sh && ./deploy-cpanel.sh",
+    "postbuild": "echo 'Build completed successfully!'"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
