Implement comprehensive SEO and favicon system
Added full SEO asset pipeline including favicons, Open Graph and Twitter images, browserconfig, webmanifest, robots.txt, and asset generation scripts. Updated layout and components for improved meta tags, structured data, and logo usage. Introduced Breadcrumbs and SEOHead components for dynamic SEO and structured data. Enhanced package.json with asset generation scripts.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "postbuild": "echo 'Build completed successfully!'"
+    "postbuild": "echo 'Build completed successfully!'",
+    "generate-favicons": "node scripts/generate-favicons.js",
+    "generate-seo-assets": "node scripts/generate-seo-assets.js",
+    "generate-all-assets": "npm run generate-favicons && npm run generate-seo-assets"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
