--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "generate-all-assets": "npm run generate-favicons && npm run generate-seo-assets"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.1",
     "@supabase/supabase-js": "^2.57.4",
     "@types/bcryptjs": "^2.4.6",
@@ -23,6 +24,7 @@
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
+    "critters": "^0.0.23",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "jsonwebtoken": "^9.0.2",
