Optimize hero images and improve performance
Adds a script to compress hero images and updates image quality settings for better web performance. Refines Next.js config for modern browser targeting, image formats, and caching. Improves layout and analytics loading, reserves footer space to prevent CLS, and updates preload and image usage for optimized assets.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "fix-deployment": "node scripts/fix-deployment-issues.js",
     "generate-favicons": "node scripts/generate-favicons.js",
     "generate-seo-assets": "node scripts/generate-seo-assets.js",
-    "generate-all-assets": "npm run generate-favicons && npm run generate-seo-assets"
+    "generate-all-assets": "npm run generate-favicons && npm run generate-seo-assets",
+    "optimize-images": "node scripts/optimize-hero-images.js",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
